[gd_scene format=3 uid="uid://df6m5ud8f6811"]

[ext_resource type="Script" uid="uid://d04omxkkj5n4b" path="res://common/singletons/global_audio.gd" id="1_5vv2e"]

[node name="GlobalAudio" type="Node" unique_id=367519782]
process_mode = 3
script = ExtResource("1_5vv2e")

[node name="PlayerCharacterFxPlayer" type="AudioStreamPlayer" parent="." unique_id=702947768]
bus = &"FX"

[node name="InventoryFxPlayer" type="AudioStreamPlayer" parent="." unique_id=1055105371]
bus = &"FX"

[node name="MenuFxPlayer" type="AudioStreamPlayer" parent="." unique_id=2098052365]
bus = &"FX"

[node name="DialogueFxPlayer" type="AudioStreamPlayer" parent="." unique_id=212314716]
bus = &"FX"

[node name="WorldFxPlayer" type="AudioStreamPlayer" parent="." unique_id=1380367173]
bus = &"FX"

[node name="MusicTrack1Player" type="AudioStreamPlayer" parent="." unique_id=362739348]
bus = &"Music"

[node name="MusicTrack2Player" type="AudioStreamPlayer" parent="." unique_id=1575602526]
bus = &"Music"
